WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168422
<input type=range readonly> doesn't act per spec
https://bugs.webkit.org/show_bug.cgi?id=168422
Summary
<input type=range readonly> doesn't act per spec
Simon Pieters (:zcorpan)
Reported
2017-02-16 04:56:28 PST
Related issue:
https://bugs.webkit.org/show_bug.cgi?id=168421
(This issue for chromium:
https://bugs.chromium.org/p/chromium/issues/detail?id=693037
) Test case:
http://software.hixie.ch/utilities/js/live-dom-viewer/saved/4892
HTML standard: [[ The following content attributes must not be specified and do not apply to the element: ... readonly, ... ]]
https://html.spec.whatwg.org/#range-state-(type=range
) In Gecko and Edge, readonly does not apply as per spec. I think the WebKit/Chromium is confusing UI. (Credit to chaals for bringing this to my attention in
https://github.com/whatwg/html/issues/2311#issuecomment-278002216
)
Attachments
Patch
(12.32 KB, patch)
2017-02-18 21:41 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-02-18 15:13:02 PST
<
rdar://problem/30593189
>
Chris Dumez
Comment 2
2017-02-18 21:41:06 PST
Created
attachment 302067
[details]
Patch
WebKit Commit Bot
Comment 3
2017-02-18 23:24:18 PST
Comment on
attachment 302067
[details]
Patch Clearing flags on attachment: 302067 Committed
r212610
: <
http://trac.webkit.org/changeset/212610
>
WebKit Commit Bot
Comment 4
2017-02-18 23:24:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug