<input type=range readonly> doesn't act per spec https://bugs.webkit.org/show_bug.cgi?id=168422 <rdar://problem/30593189>

Reviewed by Ryosuke Niwa.

Source/WebCore:

'readonly' attribute should not apply to <input type=range> as per the HTML
specification:
- https://html.spec.whatwg.org/#the-input-element:attr-input-readonly-3

Firefox and Edge already behave as per the specification.

No new tests, updated existing tests.

* html/RangeInputType.cpp:
(WebCore::RangeInputType::handleMouseDownEvent):
(WebCore::RangeInputType::handleTouchEvent):
(WebCore::RangeInputType::handleKeydownEvent):
* html/shadow/SliderThumbElement.cpp:
(WebCore::SliderThumbElement::defaultEventHandler):
(WebCore::SliderThumbElement::willRespondToMouseMoveEvents):
(WebCore::SliderThumbElement::willRespondToMouseClickEvents):

LayoutTests:

Update / rebaseline existing tests to reflect behavior change.

* fast/forms/range/range-drag-expected.txt:
* fast/forms/range/range-drag-when-toggled-disabled-expected.txt:
* fast/forms/range/range-drag-when-toggled-disabled.html:
* fast/forms/range/range-drag.html:
* fast/forms/range/range-keyoperation-expected.txt:
* fast/forms/range/range-keyoperation.html:


Canonical link: https://commits.webkit.org/185571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212610 268f45cc-cd09-0410-ab3c-d52691b4dbfc